# SIST_AGENTICO_HOTELERO

./: .SESSION_SUMMARY.txt  .copilotignore  .dockerignore  .env.railway  .gitattributes  .gitignore  00-ENTREGA-FINAL-FLYIO.md  00-INDICE-NAVEGACION.md  00_INDICE_DIA_3.3_START_HERE.md  1_DOC_AGHOTEL.txt  2_DOC_AGHOTEL.txt  3_DOC_AGHOTEL.txt  ACCION_INMEDIATA.md  ANALISIS-RAILWAY-VS-FLYIO.md  ANALISIS_SUPABASE.txt  AUDIT_FINAL  BLUEPRINT_CORRECCION_TESTS.md  CIERRE-SESION-16-OCTUBRE.md  CLEANUP_OPTIMIZATION_PLAN.md  CLEANUP_PLAN.md  CLEANUP_VERIFICATION_22OCT.md  CLOSURE_CHECKLIST_2025-10-04.md  COMANDOS-FLYIO-LISTOS.md  CONFIGURACION_PRODUCCION_AUTOCURATIVA.md  CONSOLIDACION-DOCUMENTACION-RESUMEN.md  COPILOT_TROUBLESHOOTING.md  DEPLOYMENT-RAILWAY.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_STATUS.md  DIA_3.3b_CREATE_PR.md  DIA_3.4_POST_MERGE_FIX.md  DIA_3.5_DEPLOYMENT_INSTRUCTIONS.md  DIA_6_DEPLOYMENT_FLY_IO_COMPLETADO.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.optimized  END_OF_DAY_REPORT.md  ESTADO-FINAL-PROYECTO.md  ESTADO_ACTUAL.md  ESTADO_CORRECCION_TESTS.md  (+96 more)
agente-hotel-api/: .dockerignore  .env.example  .env.staging.template  .env.supabase.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  AUDIO_TESTING_SUMMARY.md  CHECKLIST-DEPLOYMENT-MANANA.md  CHECKLISTS-TEMPLATES-EJECUTABLES.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT-STAGING-PLAN.md  DEPLOYMENT-STAGING-SUMMARY.md  DEPLOYMENT_100PCT_SUCCESS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_STATUS_FINAL_95PCT.md  DEVIATIONS.md  Dockerfile  Dockerfile.audio-optimized  Dockerfile.dev  Dockerfile.optimized  Dockerfile.production  END_OF_DAY_REPORT.md  FASE1-COMPLETADO.md  FASE1-REMEDIACION-COMPLETADO.md  FASE2-COMPLETADO.md  FASE2_TESTING_COMPLETADO.md  FASE3-COMPLETADO.md  FASE3_INTEGRACION_COMPLETADA.md  FASE4_OPTIMIZACION_COMPLETADA.md  FRENTE_A_VALIDACION_FINAL.md  FRENTE_B_RESUMEN_EJECUTIVO.md  FRENTE_C_RESUMEN_EJECUTIVO.md  FRENTE_D_RESUMEN_EJECUTIVO.md  GUIA_VALIDACION_C1_SPOF_FIX.md  INDEX.md  INFRASTRUCTURE_VALIDATION_REPORT.md  LIMPIEZA-RESUMEN.md  (+64 more)
agente-hotel-api/.mcp/: README.md
agente-hotel-api/.observability/: BLUEPRINT-EXTERNAL-ANALYSIS.md  CLEANUP_SUMMARY_2025-10-15.md  COMPLETION-CERTIFICATE.md  FINAL-PROJECT-STATUS-REPORT.md  FINAL_VERIFICATION_2025-10-15.md  P016_COMPLETION_SUMMARY.md  P016_EXECUTIVE_SUMMARY.md  P017_COMPLETION_SUMMARY.md  P017_EXECUTIVE_SUMMARY.md  P018_COMPLETION_SUMMARY.md  P018_EXECUTIVE_SUMMARY.md  P019_COMPLETION_SUMMARY.md  P019_EXECUTIVE_SUMMARY.md  P020_COMPLETION_SUMMARY.md  P020_EXECUTIVE_SUMMARY.md  PRE-LAUNCH-TOOLKIT-SUMMARY.md
agente-hotel-api/.optimization-reports/: 4_BLOQUEANTES_CRITICOS_PREMERG.md  CODE_REVIEW_ANALISIS_PROFUNDO.md  DIA_3.6_PREFLIGHT_REPORT.md  ESTADO_MAESTRO_DIA3.md  FASE1_COMPLETION_REPORT.txt  FASE1_EXECUTIVE_SUMMARY.md  FASE1_IMPLEMENTATION_PLAN.md  FINAL_TECHNICAL_REVIEW_DIA2.md  IMPLEMENTACION_BLOQUEANTES_DIA1.md  INDICE_FASE1.md  NAVEGACION_RAPIDA_PHASE2a.md  PRE_MERGE_CHECKLIST.md  PR_DESCRIPTION_DIA3.md  QUICK_START_NEXT_STEPS.md  QUICK_START_TESTING_DIA1_TARDE.md  RESUMEN_EJECUTIVO_DECISION_FINAL.md  START_HERE_COMIENZA_AQUI.md  TESTING_REPORT_DIA1_TARDE.md  refactored_critical_functions_part1.py  refactored_critical_functions_part2.py
agente-hotel-api/.performance/: P015_COMPLETION_SUMMARY.md  P015_EXECUTIVE_SUMMARY.md  baseline.json
agente-hotel-api/.playbook/: DAILY_FOCUS_TEMPLATE.md  DIA_3.5_DEPLOY_STAGING.md  DIA_4_MONITORING_REPORT.md  DIA_4_SESSION_SUMMARY.md  DIA_5_DAILY_REPORT.md  DIA_6_OPTIMIZATION_REPORT.md  DIA_7_TO_11_WEEKLY_REPORT.md  FINAL_DEPLOYMENT_REPORT.txt  FULL_EXECUTION_SUMMARY.md  GUIA_TROUBLESHOOTING.md  PHASE_C_SUMMARY.md  PHASE_D_EXECUTION_SUMMARY.md  PHASE_D_HARDENING_PLAN.md  PHASE_E1_GMAIL_INTEGRATION.md  PLAN_MAESTRO_0KM.md  SESSION_2025-10-05_COMPLETE.md  TECH_DEBT_REPORT.md  WEEKLY_OPERATIONS_PLAYBOOK.md  alert_validation_report.json  alert_validation_report_real.json  canary_diff_report.json  daily_report_2025-10-30.md  last_pytest_run.txt  multilingual_test_results.json  post_deployment_monitoring.json  preflight_report.json  production_deployment_log.json  project_config.yml  security_report.json  test_baseline_report.md  todos_20251005_031406.txt
agente-hotel-api/.security/: P011_EXECUTIVE_SUMMARY.md  P012_COMPLETION_SUMMARY.md  P012_EXECUTIVE_SUMMARY.md  P013_COMPLETION_SUMMARY.md  P013_EXECUTIVE_SUMMARY.md  P014_COMPLETION_SUMMARY.md  P014_EXECUTIVE_SUMMARY.md  REMEDIATION-REPORT.md  compliance-report-latest.json  compliance-report-latest.md  license_exceptions.json  owasp-scan-latest.json  owasp-scan-latest.md  secret-scan-latest.md  vulnerability_exceptions.json
agente-hotel-api/alembic/: env.py
agente-hotel-api/app/: __init__.py  main.py  main_enhanced.py  worker.py
agente-hotel-api/audit_results/: audit-metadata.json  audit-report.md  run-audit.sh
agente-hotel-api/deploy/: deploy.sh  docker-compose.production.yml
agente-hotel-api/docs/: 00-DOCUMENTATION-CENTRAL-INDEX.md  ANALISIS_INFORME_EXTERNO.md  AUDIO_CACHE.md  AUDIO_PROCESSING.md  AUDIO_RESPONSES.md  AUDIO_SYSTEM_FINAL_DOCUMENTATION.md  BLUEPRINT_OPTIMIZATION_0KM.md  (+87 more)
(+726 files in other folders)
