[tool.poetry]
name = "agente-hotel-api"
version = "0.1.0"
description = "Agente recepcionista hotelero con IA"
authors = ["Tu Nombre <tu@correo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
redis = "^5.0.7"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
structlog = "^24.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"
prometheus-client = "^0.20.0"
slowapi = "^0.1.9"
bleach = "^6.1.0"
python-multipart = "^0.0.9"
# Audio processing dependencies
openai-whisper = "^20231117"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
pytest-watch = "^4.2.0"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "__pycache__"]
skips = ["B101", "B601"]  # Skip assert_used and subprocess checks

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
