[tool.poetry]
name = "agente-hotel-api"
version = "0.1.0"
description = "Agente recepcionista hotelero con IA"
authors = ["Tu Nombre <tu@correo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
redis = "^5.0.7"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
structlog = "^24.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.2"
prometheus-client = "^0.20.0"
slowapi = "^0.1.9"
bleach = "^6.2.0"
python-multipart = "^0.0.18"
# Audio processing dependencies
aiohttp = "^3.10.5"
aiofiles = "^23.2.1"
# Performance optimization dependencies
psutil = "^5.9.8"
# QR Code generation
qrcode = {extras = ["pil"], version = "^7.4.2"}
croniter = "^2.0.1"
starlette = "^0.40.0"
pillow = "^12.0.0"
requests = "^2.32.3"
# OpenTelemetry for distributed tracing (H1)
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.41b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
pytest-watch = "^4.2.0"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
aiosqlite = "^0.21.0"
mypy = "^1.11.2"
alembic = "^1.13.2"
pyotp = "^2.9.0"
locust = "^2.42.1"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "__pycache__"]
skips = ["B101", "B601"]  # Skip assert_used and subprocess checks

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
markers = [
    "security: Security-related tests",
    "critical: Critical security findings (CRITICAL severity)",
    "high: High severity security issues",
    "ai: AI/LLM-specific security tests",
    "owasp: OWASP Top 10 compliance tests"
]
